--- a/wp-content/themes/mariekathline/sass/style.scss
+++ b/wp-content/themes/mariekathline/sass/style.scss
@@ -2,6 +2,129 @@
 /*-----------------------------------------------*/
 @import "components/variables";
 
+/* Navigation
+/*-----------------------------------------------*/
+
+.st-container, .st-pusher, .st-content {
+	height: 100%;
+}
+
+.st-content {
+	overflow-y: scroll;
+	background: #f3efe0;
+}
+
+.st-content, .st-content-inner {
+	position: relative;
+}
+
+.st-container {
+	position: relative;
+	overflow: hidden;
+}
+
+.st-menu-open .st-pusher::after {
+	width: 100%;
+	height: 100%;
+	opacity: 1;
+	-webkit-transition: opacity 0.5s;
+	transition: opacity 0.5s;
+}
+
+.st-menu {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 100;
+	visibility: hidden;
+	width: 300px;
+	height: 100%;
+	background: #48a770;
+	-webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  
+  &:after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.2);
+    content: '';
+    opacity: 1;
+    -webkit-transition: opacity 0.5s;
+    transition: opacity 0.5s;
+  }
+
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+
+    li {
+      a {
+        display: block;
+        padding: 1em 1em 1em 1.2em;
+        outline: none;
+        box-shadow: inset 0 -1px rgba(0,0,0,0.2);
+        color: #f3efe0;
+        text-transform: uppercase;
+        text-shadow: 0 0 1px rgba(255,255,255,0.1);
+        letter-spacing: 1px;
+        font-weight: 400;
+        -webkit-transition: background 0.3s, box-shadow 0.3s;
+        transition: background 0.3s, box-shadow 0.3s;
+
+        &:hover {
+          background: rgba(0,0,0,0.2);
+          box-shadow: inset 0 -1px rgba(0,0,0,0);
+          color: #fff;
+        }
+      }
+
+      &:first-child {
+        a {
+          box-shadow: inset 0 -1px rgba(0,0,0,0.2), inset 0 1px rgba(0,0,0,0.2);
+        }
+      }
+    }
+  }
+
+  h2 {
+    margin: 0;
+    padding: 1em;
+    color: rgba(0,0,0,0.4);
+    text-shadow: 0 0 1px rgba(0,0,0,0.1);
+    font-weight: 300;
+    font-size: 2em;
+  }
+}
+
+.st-menu-open .st-menu::after {
+	width: 0;
+	height: 0;
+	opacity: 0;
+	-webkit-transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
+	transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
+}
+
+
+/* Effect 1: Slide in on top */
+.st-effect-1.st-menu {
+	visibility: visible;
+	-webkit-transform: translate3d(-100%, 0, 0);
+  transform: translate3d(-100%, 0, 0);
+  
+  &:after {
+    display: none;
+  }
+}
+
+.st-effect-1.st-menu-open .st-effect-1.st-menu {
+	visibility: visible;
+	-webkit-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
+}
 
 
 /* Commun
@@ -19,20 +142,447 @@
     color:#FFF;
   }
 
-  &#gallery {
-    width: 100%;
-    min-height: 100vh;
-    margin:2em 0;
-
-    h2 {
-      color: #24CC89;
-    }
-  }
-
   h2 {
     font-size: 8em;
     text-transform: lowercase;
     letter-spacing: -15px;
     text-shadow: -1px 1px 0.2em rgba(255,255,255,0.4), 1px -1px 0.4em rgba(255,255,255,0.4);
   }
+}
+
+#gallery {
+  padding-bottom: 4em;
+}
+
+footer {
+    text-align: center;
+    font-size: 11px;
+    padding: 15px 0;
+    letter-spacing: 2px;
+    span {
+      color: tomato;
+    }
+}
+
+
+
+
+/* ==============================
+   Portfolio
+   ============================== */
+
+
+/*
+ * Works filter
+ */
+
+ .works-filter{
+  list-style: none;
+  padding: 0;
+  margin: 0 0 45px 0;
+  font-size: 13px;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 0.4em;
+  color: #555;
+  cursor: default;
+}
+.works-filter a{
+  display: inline-block;
+  margin: 0 27px;
+  color: #999;
+  text-decoration: none;
+  
+  -webkit-transition: all 0.37s cubic-bezier(0.000, 0.000, 0.580, 1.000);  
+  -moz-transition: all 0.27s cubic-bezier(0.000, 0.000, 0.580, 1.000); 
+  -o-transition: all 0.27s cubic-bezier(0.000, 0.000, 0.580, 1.000);
+  -ms-transition: all 0.27s cubic-bezier(0.000, 0.000, 0.580, 1.000); 
+  transition: all 0.27s cubic-bezier(0.000, 0.000, 0.580, 1.000);
+  
+  cursor: pointer;
+}
+.works-filter a:hover{
+  color: #111;
+  text-decoration: none;
+}
+.works-filter a.active{
+  color: #111;
+  cursor: default;
+}
+.works-filter a.active:hover{
+  color: #111;
+}
+
+
+/*
+* Works grid 
+*/
+
+.works-grid{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.work-item{
+  width: 25%;
+  float: left;
+  margin: 0;
+  
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.work-grid-2 .work-item{
+  width: 50%;
+}
+.work-grid-3 .work-item{
+  width: 33.333%;
+}
+.container .work-grid-3 .work-item{
+  width: 33.2%;
+}
+.work-grid-5 .work-item{
+  width: 20%;
+}
+
+.works-grid.work-grid-gut{
+  margin: 0 0 0 -10px;
+}
+.works-grid.work-grid-gut .work-item{
+  padding: 0 0 10px 10px;
+}
+
+.work-item > a{
+  display: block;    
+  padding: 0 0 84px 0;
+  position: relative;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+.work-item a,
+.work-item a:hover{
+  color: #111;
+  border: none;
+}
+.work-img{
+  position: relative;
+  overflow: hidden;
+}
+.work-img img{
+  width: 100%;
+  display: block;
+  overflow: hidden;
+}
+.work-intro{
+  width: 100%;
+  height: 84px;
+  padding: 20px 20px 0 20px;
+  
+  -webkit-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  overflow: hidden;
+}
+.work-title{
+  margin: 0 0 8px 0;
+  padding: 0;
+  font-size: 13px;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  line-height: 1.2;
+}
+.work-descr{    
+  font-size: 11px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #aaa;
+  line-height: 1.2;
+}
+.works-grid.hide-titles .work-item > a{
+  overflow: hidden;    
+  padding: 0;
+}
+.works-grid.hide-titles .work-item .work-intro{
+  opacity: 0;
+  bottom: -94px;
+}
+.works-grid.hide-titles .work-item:hover .work-intro{
+  opacity: 1;
+}
+
+
+
+/* Work item hover state */
+
+.work-intro{
+  -webkit-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);  
+  -moz-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000); 
+  -o-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+  -ms-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000); 
+  transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+}
+
+.work-item:hover .work-intro{
+  /*bottom: auto;*/
+  /*top: 50%;*/
+  color: #fff;
+  
+  -webkit-transform: translateY(-99px);
+  -moz-transform: translateY(-99px);
+  transform: translateY(-99px);    
+  
+  z-index: 3; 
+}
+.work-item:hover .work-title{
+  color: #ccc;
+}
+.work-item:hover .work-descr{
+  color: #999;
+}
+.work-item .work-img:after{
+  content: " ";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(250,250,250, 0);
+  
+  -webkit-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);  
+  -moz-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000); 
+  -o-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+  -ms-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000); 
+  transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+  
+}
+.work-item:hover .work-img:after{    
+  background: rgba(20,20,20, .85);
+}
+
+.works-grid.hover-color .work-item:hover .work-intro,
+.works-grid.hover-color .work-item:hover .work-title,
+.works-grid.hover-color .work-item:hover .work-descr{
+  color: #fff;
+}
+.works-grid.hover-color .work-item:hover .work-img:after{    
+  background: #e41919;
+  opacity: .73;
+}
+.works-grid.hover-white .work-item:hover .work-intro,
+.works-grid.hover-white .work-item:hover .work-title,
+.works-grid.hover-white .work-item:hover .work-descr{
+  color: #000;
+}
+.works-grid.hover-white .work-item:hover .work-img:after{    
+  background: rgba(250,250,250, .9);
+}
+
+.work-item .work-img > img{
+  -webkit-transition: all 0.3s cubic-bezier(0.300, 0.100, 0.580, 1.000);  
+  -moz-transition: all 0.3s cubic-bezier(0.300, 0.100, 0.580, 1.000); 
+  -o-transition: all 0.3s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+  -ms-transition: all 0.3s cubic-bezier(0.300, 0.100, 0.580, 1.000); 
+  transition: all 0.3s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+}
+
+.work-item:hover .work-img > img{
+  -webkit-transform: scale(1.05);
+  -moz-transform: scale(1.05);
+  -o-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  transform: scale(1.05);
+}
+
+/*
+* Works full view
+*/
+
+.work-full{
+  display: none;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  z-index: 10000;
+}
+.work-full-load{
+  padding-top: 60px;
+}
+.work-loader{
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  z-index: 10001;
+}
+.work-loader:after{
+  display: block;
+  content: " ";
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin: -8px 0 0 -8px;
+  background: url(../images/loader.gif) no-repeat;
+}
+
+/* Work navigation */
+
+.work-navigation{
+  width: 100%;
+  background: #fff;    
+  font-size: 11px;
+  text-transform: uppercase;
+  letter-spacing: 2px;    
+  
+  z-index: 99;
+
+  .fa{
+    font-size: 12px;
+    vertical-align: middle;
+  }
+
+  .fa-times{
+    font-size: 16px;
+    margin-top: -2px;
+  }
+
+  a{
+    display: block;
+    float: left;
+    width: 33.33333%;
+    overflow: hidden;
+    vertical-align: middle;
+    text-decoration: none;
+    white-space: nowrap;
+    cursor: default;
+    color: #555; 
+
+    &:visited{ 
+      color: #555; 
+    }
+    
+    &:hover{ 
+      color: #111; 
+    }
+
+    span{
+      display: inline-block;
+      height: 60px;
+      line-height: 59px;
+      padding: 0 4%;
+      background: #fff;
+      cursor: pointer;
+      
+      -webkit-transition: all 0.3s ease-out;
+      -moz-transition: all 0.3s ease-out;
+      -o-transition: all 0.3s ease-out;
+      -ms-transition: all 0.3s ease-out;
+      transition: all 0.3s ease-out;
+
+      &:hover{
+        background: #f7f7f7;
+      }
+    }
+  }
+}
+
+
+.work-back-link{
+  margin: 20px 0 0;
+  display: block;
+  background: #fff;
+  font-size: 11px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #151515; 
+}
+.work-prev{
+  text-align: left;
+}
+.work-all{
+  text-align: center;
+}
+.work-next{
+  text-align: right;
+}
+.work-container{
+  padding: 50px 0;
+}
+.work-full-title{
+  margin: 0 0 10px 0;
+  padding: 0;
+  font-size: 24px;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 1px;
+}
+.work-full-media{
+  margin-top: 30px;
+
+  img{
+    max-width: 100%;
+    height: auto;
+  }
+}
+
+.work-full-text{
+  text-align: left;
+  font-size: 13px;
+  color: #777;
+
+  h6{ 
+    margin-top: 5px;
+  }
+}
+
+.work-detail{
+  font-weight: 400;
+
+  p {
+    &:last-child{
+      margin-bottom: 0;
+  
+    }
+  }
+}
+
+.work-full-detail{
+  font-size: 11px;
+  color: #777;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+
+  p{ 
+    padding: 4px 0;
+    margin: 0;
+    border-top: 1px solid rgba(0,0,0, .05);
+
+    &:last-child{
+      border-bottom: 1px solid rgba(0,0,0, .05);
+    }
+
+    strong{ 
+      width: 100px;
+      display: inline-block;
+    }
+  }
+}
+
+.work-full-action{
+  margin-top: 30px;
+  padding-top: 30px;
+  border-top: 1px solid #eaeaea;
+  text-align: center;
 }
