--- a/wp-content/themes/mariekathline/css/style.css
+++ b/wp-content/themes/mariekathline/css/style.css
@@ -104,12 +104,28 @@
   background: #111;
   width: 100%;
   min-height: 100vh;
-  color: #FFF; }
-.section h2 {
-  font-size: 8em;
-  text-transform: lowercase;
-  letter-spacing: -15px;
-  text-shadow: -1px 1px 0.2em rgba(255, 255, 255, 0.4), 1px -1px 0.4em rgba(255, 255, 255, 0.4); }
+  color: #FFF;
+  position: relative; }
+  .section#header::after {
+    content: '';
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid #FFF;
+    position: absolute;
+    bottom: 40px;
+    left: calc(50% - 10px);
+    animation: bounce 2s ease-out infinite; }
+  .section#header h2 {
+    font-size: 8em;
+    text-transform: lowercase;
+    letter-spacing: -15px;
+    text-shadow: -1px 1px 0.2em rgba(255, 255, 255, 0.4), 1px -1px 0.4em rgba(255, 255, 255, 0.4);
+    box-shadow: -1px 1px 0.2em rgba(255, 255, 255, 0.4), 1px -1px 0.4em rgba(255, 255, 255, 0.4);
+    padding: 30px;
+    text-align: center;
+    border: 10px solid #FFF; }
 
 #gallery {
   padding-bottom: 4em; }
@@ -192,9 +208,8 @@ footer {
 
 .works-grid.work-grid-gut {
   margin: 0 0 0 -10px; }
-
-.works-grid.work-grid-gut .work-item {
-  padding: 0 0 10px 10px; }
+  .works-grid.work-grid-gut .work-item {
+    padding: 0 0 10px 10px; }
 
 .work-item > a {
   display: block;
@@ -212,11 +227,10 @@ footer {
 .work-img {
   position: relative;
   overflow: hidden; }
-
-.work-img img {
-  width: 100%;
-  display: block;
-  overflow: hidden; }
+  .work-img img {
+    width: 100%;
+    display: block;
+    overflow: hidden; }
 
 .work-intro {
   width: 100%;
@@ -252,8 +266,7 @@ footer {
   padding: 0; }
 
 .works-grid.hide-titles .work-item .work-intro {
-  opacity: 0;
-  bottom: -94px; }
+  opacity: 0; }
 
 .works-grid.hide-titles .work-item:hover .work-intro {
   opacity: 1; }
@@ -474,5 +487,39 @@ footer {
   padding-top: 30px;
   border-top: 1px solid #eaeaea;
   text-align: center; }
+
+@media only screen and (max-width: 992px) {
+  .work-item,
+  .work-grid-3 .work-item,
+  .container .work-grid-3 .work-item,
+  .work-grid-5 .work-item {
+    width: 50%; } }
+@media only screen and (max-width: 480px) {
+  .work-item,
+  .work-grid-2 .work-item,
+  .work-grid-3 .work-item,
+  .container .work-grid-3 .work-item,
+  .work-grid-5 .work-item {
+    width: 100%; } }
+/* Animation */
+@keyframes bounce {
+  from {
+    bottom: 40px; }
+  50% {
+    bottom: 30px; }
+  to {
+    bottom: 40px; } }
+section#instagram {
+  background: #000;
+  padding: 5em 0; }
+  section#instagram #mk_instafeed {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    overflow: hidden; }
+    section#instagram #mk_instafeed li {
+      list-style-type: none; }
+      section#instagram #mk_instafeed li img {
+        height: 150px; }
 
 /*# sourceMappingURL=style.css.map */
