--- a/wp-content/themes/mariekathline/sass/style.scss
+++ b/wp-content/themes/mariekathline/sass/style.scss
@@ -140,13 +140,31 @@
     width: 100%;
     min-height: 100vh;
     color:#FFF;
-  }
+    position: relative;
 
-  h2 {
-    font-size: 8em;
-    text-transform: lowercase;
-    letter-spacing: -15px;
-    text-shadow: -1px 1px 0.2em rgba(255,255,255,0.4), 1px -1px 0.4em rgba(255,255,255,0.4);
+    &::after {
+      content: '';
+      width: 0;
+      height: 0;
+      border-left: 10px solid transparent;
+      border-right: 10px solid transparent;
+      border-top: 10px solid #FFF;
+      position: absolute;
+      bottom: 40px;
+      left: calc(50% - 10px);
+      animation: bounce 2s ease-out infinite;
+    }
+
+    h2 {
+      font-size: 8em;
+      text-transform: lowercase;
+      letter-spacing: -15px;
+      text-shadow: -1px 1px 0.2em rgba(255,255,255,0.4), 1px -1px 0.4em rgba(255,255,255,0.4);
+      box-shadow: -1px 1px 0.2em rgba(255,255,255,0.4), 1px -1px 0.4em rgba(255,255,255,0.4);
+      padding: 30px;
+      text-align: center;
+      border:10px solid #FFF;
+    }
   }
 }
 
@@ -247,9 +265,9 @@ footer {
 
 .works-grid.work-grid-gut{
   margin: 0 0 0 -10px;
-}
-.works-grid.work-grid-gut .work-item{
-  padding: 0 0 10px 10px;
+  .work-item{
+    padding: 0 0 10px 10px;
+  }
 }
 
 .work-item > a{
@@ -268,12 +286,13 @@ footer {
 .work-img{
   position: relative;
   overflow: hidden;
+  img{
+    width: 100%;
+    display: block;
+    overflow: hidden;
+  }
 }
-.work-img img{
-  width: 100%;
-  display: block;
-  overflow: hidden;
-}
+ 
 .work-intro{
   width: 100%;
   height: 84px;
@@ -289,6 +308,7 @@ footer {
   text-align: center;
   overflow: hidden;
 }
+
 .work-title{
   margin: 0 0 8px 0;
   padding: 0;
@@ -298,6 +318,7 @@ footer {
   letter-spacing: 0.2em;
   line-height: 1.2;
 }
+
 .work-descr{    
   font-size: 11px;
   text-align: center;
@@ -305,14 +326,17 @@ footer {
   color: #aaa;
   line-height: 1.2;
 }
+
 .works-grid.hide-titles .work-item > a{
   overflow: hidden;    
   padding: 0;
 }
+
 .works-grid.hide-titles .work-item .work-intro{
   opacity: 0;
-  bottom: -94px;
+  //bottom: -94px;
 }
+
 .works-grid.hide-titles .work-item:hover .work-intro{
   opacity: 1;
 }
@@ -585,4 +609,48 @@ footer {
   padding-top: 30px;
   border-top: 1px solid #eaeaea;
   text-align: center;
+}
+
+@media only screen and (max-width: 992px) {
+  .work-item,
+  .work-grid-3 .work-item,
+  .container .work-grid-3 .work-item,
+  .work-grid-5 .work-item{
+      width: 50%;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .work-item,
+  .work-grid-2 .work-item,
+  .work-grid-3 .work-item,
+  .container .work-grid-3 .work-item,
+  .work-grid-5 .work-item {
+      width: 100%;
+  } 
+}
+
+/* Animation */
+
+@keyframes bounce{
+  from {bottom: 40px;}
+  50%  {bottom: 30px;}
+  to   {bottom: 40px;}
+}
+
+section#instagram {
+  background: #000;
+  padding: 5em 0;
+  #mk_instafeed {
+    padding: 0;
+    margin: 0;
+    display:flex;
+    overflow: hidden;
+    li {
+      list-style-type: none;
+      img {
+        height: 150px;
+      }
+    }
+  }
 }
