--- a/wp-content/themes/mariekathline/sass/style.scss
+++ b/wp-content/themes/mariekathline/sass/style.scss
@@ -134,43 +134,37 @@
   font-family: $main-font;
 }
 
+
 .section {
   &#header {
-    background: #111;
+    background: #000;
     width: 100%;
-    min-height: 100vh;
     color:#FFF;
     position: relative;
 
-    &::after {
-      content: '';
-      width: 0;
-      height: 0;
-      border-left: 10px solid transparent;
-      border-right: 10px solid transparent;
-      border-top: 10px solid #FFF;
-      position: absolute;
-      bottom: 40px;
-      left: calc(50% - 10px);
-      animation: bounce 2s ease-out infinite;
-    }
-
-    h2 {
-      font-size: 8em;
+    h1 {
       text-transform: lowercase;
-      letter-spacing: -15px;
-      text-shadow: -1px 1px 0.2em rgba(255,255,255,0.4), 1px -1px 0.4em rgba(255,255,255,0.4);
-      box-shadow: -1px 1px 0.2em rgba(255,255,255,0.4), 1px -1px 0.4em rgba(255,255,255,0.4);
+      letter-spacing: -2px;
+      text-shadow: -1px 1px 0.2em rgba(255, 255, 255, 0.4), 1px -1px 0.4em rgba(255, 255, 255, 0.4);
       padding: 30px;
       text-align: center;
-      border:10px solid #FFF;
+      font-size: 22px;
+
+      @media screen and (max-width:500px) {
+        letter-spacing: -4px;
+      }
+
+      a {
+        color:inherit;
+        &:hover, &:active, &:focus {
+          text-decoration: none;
+        }
+      }
     }
   }
 }
 
-#gallery {
-  padding-bottom: 4em;
-}
+
 
 footer {
     text-align: center;
@@ -245,6 +239,8 @@ footer {
   width: 25%;
   float: left;
   margin: 0;
+  cursor: pointer;
+
   
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -286,6 +282,7 @@ footer {
 .work-img{
   position: relative;
   overflow: hidden;
+  
   img{
     width: 100%;
     display: block;
@@ -652,5 +649,22 @@ section#instagram {
         height: 150px;
       }
     }
+  }
+}
+
+
+
+section.work {
+  .cover {
+    background-size:cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 400px;
+  }
+
+  .work_sub_title {
+    font-family: Cookie;
+    font-size:40px;
   }
 }
